--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ a, .learnMoreBtn{
   font-weight: 700;
   font-size: 1rem;
   text-transform: none;
+  text-decoration: none;
 }
 
 img {
@@ -256,6 +257,7 @@ footer p {
 
 footer a {
   color: #ffffff;
+  text-decoration: underline;
   margin:0 10px;
   transition: color 1s ease, text-decoration 1s ease;
 }
