--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,261 @@
 /* Import Rubik Moonrocks & Chakra Petch fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Rubik+Moonrocks&display=swap');
 
-html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%
+}
+
+body {
+  margin: 0
+}
+
+article,
+aside,
+footer,
+header,
+nav,
+section {
+  display: block
+}
+
+h1 {
+  font-size: 2em;
+  margin: .67em 0
+}
+
+figcaption,
+figure,
+main {
+  display: block
+}
+
+figure {
+  margin: 1em 40px
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted
+}
+
+b,
+strong {
+  font-weight: inherit
+}
+
+b,
+strong {
+  font-weight: bolder
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em
+}
+
+dfn {
+  font-style: italic
+}
+
+mark {
+  background-color: #ff0;
+  color: #000
+}
+
+small {
+  font-size: 80%
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline
+}
+
+sub {
+  bottom: -.25em
+}
+
+sup {
+  top: -.5em
+}
+
+audio,
+video {
+  display: inline-block
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0
+}
+
+img {
+  border-style: none
+}
+
+svg:not(:root) {
+  overflow: hidden
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0
+}
+
+button,
+input {
+  overflow: visible
+}
+
+button,
+select {
+  text-transform: none
+}
+
+button,
+html [type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button
+}
+
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0
+}
+
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText
+}
+
+fieldset {
+  padding: .35em .75em .625em
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal
+}
+
+progress {
+  display: inline-block;
+  vertical-align: baseline
+}
+
+textarea {
+  overflow: auto
+}
+
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
+  padding: 0
+}
+
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px
+}
+
+[type=search]::-webkit-search-cancel-button,
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit
+}
+
+details,
+menu {
+  display: block
+}
+
+summary {
+  display: list-item
+}
+
+canvas {
+  display: inline-block
+}
+
+template {
+  display: none
+}
+
+[hidden] {
+  display: none
+}
 
 html {
   box-sizing: border-box;
   font-size: 125%;
 }
 
-*, *:before, *:after {box-sizing: inherit}
+*,
+*:before,
+*:after {
+  box-sizing: inherit
+}
 
-.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 body {
   background-color: #003049;
@@ -33,15 +278,33 @@ h1 {
   padding: 30px 0;
 }
 
-h2, p, a, label, input, button {
+h2,
+p,
+a,
+label,
+input,
+button {
   font-family: 'Chakra Petch', sans-serif;
-  font-weight: 600;
+}
+
+h2 {
+  color: #D62828;
+  font-size: 2rem;
+  margin: 0;
 }
 
 p {
   color: #ffffff;
   font-weight: 500;
   margin: 0;
+}
+
+a,
+.learnMoreBtn {
+  font-weight: 700;
+  font-size: 1rem;
+  text-transform: none;
+  text-decoration: none;
 }
 
 img {
@@ -65,17 +328,21 @@ button {
   cursor: pointer;
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   background-color: #FCBF49;
-  color: #D62828;;
+  color: #D62828;
+  ;
 }
 
 span {
   display: inline-block;
 }
+
 .fullscreen {
   background: center / cover url(./assets/starBackground-8.png);
   height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -86,15 +353,21 @@ header {
 
 main {
   flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  overflow: auto;
+}
+
+.formContainer {
   display: grid;
+  grid-auto-flow: column;
   grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
-  grid-template-rows: 2fr 0.5fr 1fr;
-  min-height: 0px;
+  grid-template-rows: 2fr 1fr 0.5fr;
 }
 
 .rocket {
   grid-area: 2 / 2 / 4 / 4;
-  z-index: 2;
   align-self: flex-end;
 }
 
@@ -103,10 +376,11 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  grid-area:1 / 2 / 3 / 4;;
+  grid-area: 1 / 2 / 3 / 4;
+  min-width: 0;
 }
 
-.formContainer {
+.formContent {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -116,16 +390,8 @@ form {
 
 label {
   font-size: 1.6rem;
+  font-weight: 600;
   color: #ffffff;
-}
-
-a {
-  color: #003049;
-  font-weight: 700;
-  transition: color 1s ease;
-}
-a:hover, a:focus {
-  color: #D62828;
 }
 
 .inputContainer {
@@ -134,7 +400,7 @@ a:hover, a:focus {
   justify-content: center;
 }
 
-.inputContainer input:first-of-type{
+.inputContainer input:first-of-type {
   margin-right: 10px;
 }
 
@@ -142,10 +408,95 @@ input {
   border-radius: 5px;
   border: none;
   padding: 5px 10px;
-    font-size: 1rem;
+  font-size: 1rem;
+  font-weight: 600;
   font-weight: 500;
   color: #003049;
   width: 40%;
+}
+
+.modal {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  background: center / contain no-repeat url(./assets/moon.svg);
+  width: 90%;
+  max-width: 900px;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.modalContent p {
+  color: #003049;
+  width: 80%;
+}
+
+.exit {
+  color: #003049;
+  font-size: 1.4rem;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  position: absolute;
+  top: 35%;
+  right: 14%;
+  transition: color 1s ease;
+}
+
+.learnMoreBtn {
+  color: #ffffff;
+  font-weight: 700;
+  text-decoration: underline;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  transition: color 1s ease, text-decoration 1s ease;
+}
+
+.learnMoreBtn:hover,
+.learnMoreBtn:focus,
+.exit:hover,
+.exit:focus {
+  color: #D62828;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.errorPage {
+  background: bottom / contain no-repeat url(./assets/lostInSpace.svg);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.errorPage h2 {
+  font-family: 'Rubik Moonrocks', cursive;
+  font-size: 11rem;
+}
+
+.errorPage p {
+  font-weight: 700;
+  font-size: 4.5rem;
+  text-align: center;
+}
+
+.errorPage span {
+  display: block;
 }
 
 footer {
@@ -161,14 +512,17 @@ footer p {
 
 footer a {
   color: #ffffff;
-  margin:0 10px;
+  text-decoration: underline;
+  margin: 0 10px;
   transition: color 1s ease, text-decoration 1s ease;
 }
 
-footer a:hover, footer a:focus {
+footer a:hover,
+footer a:focus {
   color: #D62828;
   text-decoration: none;
 }
+
 /* Media queries start */
 /* large screens */
 @media (min-width: 2000px) {
@@ -180,58 +534,90 @@ footer a:hover, footer a:focus {
 /* Tablet screens */
 @media (max-width: 800px) {
   h1 {
-      font-size: 9vw;
-    }
+    font-size: 9vw;
+  }
 
-  p, a {
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  p,
+  a,
+  .learnMoreBtn {
+    font-size: .8rem;
+  }
+
+  .formContainer {
+    grid-auto-columns: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.5fr 0.5fr 1fr;
+  }
+
+  form {
+    grid-area: 1 / 1 / 3 / 2;
+
+  }
+
+  .rocket {
+    grid-area: 2 / 1 / 4 / 2;
+  }
+
+  label {
+    font-size: 1.3rem;
+  }
+
+  input {
     font-size: .9rem;
   }
 
-  main {
-      grid-template-columns: 1fr;
-      grid-template-rows: 2fr 0.5fr 1fr;
-    }
-  
-    form {
-      grid-area: 1 / 1 / 3 / 2;
-  
-    }
-  
-    .rocket {
-      grid-area: 2 / 1 / 4 / 2;
-    }
+  button {
+    font-size: 1rem;
+  }
 
-    label {
-      font-size: 1.3rem;
-    }
+  .exit {
+    font-size: 1.3rem;
+  }
 
-    input {
-      font-size: .9rem;
-    }
+  .errorPage {
+    justify-content: center;
+  }
 
-    button {
-      font-size: 1rem;
-    }
+  .errorPage h2 {
+    font-size: 8rem;
+  }
+
+  .errorPage p {
+    font-weight: 700;
+    font-size: 3rem;
+    text-align: center;
+  }
 }
 
 /* Mobile screens */
-@media (max-width: 480px){
+@media (max-width: 480px) {
   h1 {
     font-size: 14vw;
   }
-  
-  p, a {
-    font-size: .7rem;
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p,
+  a,
+  .learnMoreBtn {
+    font-size: .6rem;
   }
 
   form p {
     text-align: center;
   }
+
   label {
     font-size: 1.1rem;
     text-align: center;
   }
-  
+
   .inputContainer {
     flex-direction: column;
     margin: 5px 0;
@@ -248,5 +634,20 @@ footer a:hover, footer a:focus {
     font-size: .9rem;
   }
 
+  .exit {
+    font-size: 1.2rem;
+    top: 37%;
+  }
+
+  .errorPage h2 {
+    font-size: 6rem;
+  }
+
+  .errorPage p {
+    font-weight: 700;
+    font-size: 2rem;
+    text-align: center;
+  }
 }
+
 /* Media queries end */
