--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-  margin: 0
+  margin: 0;
 }
 
 article,
@@ -17,74 +17,74 @@ footer,
 header,
 nav,
 section {
-  display: block
+  display: block;
 }
 
 h1 {
   font-size: 2em;
-  margin: .67em 0
+  margin: 0.67em 0;
 }
 
 figcaption,
 figure,
 main {
-  display: block
+  display: block;
 }
 
 figure {
-  margin: 1em 40px
+  margin: 1em 40px;
 }
 
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible
+  overflow: visible;
 }
 
 pre {
   font-family: monospace, monospace;
-  font-size: 1em
+  font-size: 1em;
 }
 
 a {
   background-color: transparent;
-  -webkit-text-decoration-skip: objects
+  -webkit-text-decoration-skip: objects;
 }
 
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
-  text-decoration: underline dotted
+  text-decoration: underline dotted;
 }
 
 b,
 strong {
-  font-weight: inherit
+  font-weight: inherit;
 }
 
 b,
 strong {
-  font-weight: bolder
+  font-weight: bolder;
 }
 
 code,
 kbd,
 samp {
   font-family: monospace, monospace;
-  font-size: 1em
+  font-size: 1em;
 }
 
 dfn {
-  font-style: italic
+  font-style: italic;
 }
 
 mark {
   background-color: #ff0;
-  color: #000
+  color: #000;
 }
 
 small {
-  font-size: 80%
+  font-size: 80%;
 }
 
 sub,
@@ -92,33 +92,33 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline
+  vertical-align: baseline;
 }
 
 sub {
-  bottom: -.25em
+  bottom: -0.25em;
 }
 
 sup {
-  top: -.5em
+  top: -0.5em;
 }
 
 audio,
 video {
-  display: inline-block
+  display: inline-block;
 }
 
 audio:not([controls]) {
   display: none;
-  height: 0
+  height: 0;
 }
 
 img {
-  border-style: none
+  border-style: none;
 }
 
 svg:not(:root) {
-  overflow: hidden
+  overflow: hidden;
 }
 
 button,
@@ -129,43 +129,43 @@ textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
-  margin: 0
+  margin: 0;
 }
 
 button,
 input {
-  overflow: visible
+  overflow: visible;
 }
 
 button,
 select {
-  text-transform: none
+  text-transform: none;
 }
 
 button,
-html [type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button
+html [type='button'],
+[type='reset'],
+[type='submit'] {
+  -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
-  padding: 0
+  padding: 0;
 }
 
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 fieldset {
-  padding: .35em .75em .625em
+  padding: 0.35em 0.75em 0.625em;
 }
 
 legend {
@@ -174,63 +174,63 @@ legend {
   display: table;
   max-width: 100%;
   padding: 0;
-  white-space: normal
+  white-space: normal;
 }
 
 progress {
   display: inline-block;
-  vertical-align: baseline
+  vertical-align: baseline;
 }
 
 textarea {
-  overflow: auto
+  overflow: auto;
 }
 
-[type=checkbox],
-[type=radio] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
-  padding: 0
+  padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+  height: auto;
 }
 
-[type=search] {
+[type='search'] {
   -webkit-appearance: textfield;
-  outline-offset: -2px
+  outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none
+[type='search']::-webkit-search-cancel-button,
+[type='search']::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  font: inherit
+  font: inherit;
 }
 
 details,
 menu {
-  display: block
+  display: block;
 }
 
 summary {
-  display: list-item
+  display: list-item;
 }
 
 canvas {
-  display: inline-block
+  display: inline-block;
 }
 
 template {
-  display: none
+  display: none;
 }
 
 [hidden] {
-  display: none
+  display: none;
 }
 
 html {
@@ -241,7 +241,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit
+  box-sizing: inherit;
 }
 
 .sr-only {
@@ -272,7 +272,7 @@ h1 {
   font-family: 'Rubik Moonrocks', cursive;
   text-transform: uppercase;
   font-size: 6.5vw;
-  color: #FCBF49;
+  color: #fcbf49;
   text-align: center;
   margin: 0;
   padding: 30px 0;
@@ -288,7 +288,7 @@ button {
 }
 
 h2 {
-  color: #D62828;
+  color: #d62828;
   font-size: 2rem;
   margin: 0;
 }
@@ -315,7 +315,7 @@ img {
 }
 
 button {
-  background-color: #D62828;
+  background-color: #d62828;
   border: none;
   border-radius: 10px;
   font-size: 1.2rem;
@@ -330,9 +330,8 @@ button {
 
 button:hover,
 button:focus {
-  background-color: #FCBF49;
-  color: #D62828;
-  ;
+  background-color: #fcbf49;
+  color: #d62828;
 }
 
 span {
@@ -470,7 +469,7 @@ input {
 .learnMoreBtn:focus,
 .exit:hover,
 .exit:focus {
-  color: #D62828;
+  color: #d62828;
   text-decoration: none;
   background-color: transparent;
 }
@@ -499,10 +498,36 @@ input {
   display: block;
 }
 
+/* Gameboard */
+.gameContainer {
+  /* max-width: 30%; */
+  /* border: 1px solid black; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.p1Board,
+.p2Board {
+  border: 1px solid black;
+  margin: 10px;
+  display: flex;
+  width: 400px;
+  height: 400px;
+  flex-wrap: wrap;
+}
+
+.emptysquare {
+  border: 1px solid black;
+  width: 10%;
+  height: 10%;
+  padding: 10px;
+}
+
 footer {
   text-align: center;
   padding: 20px 0;
-  border-top: 1px #7BB3C6 solid;
+  border-top: 1px #7bb3c6 solid;
 }
 
 footer p {
@@ -519,7 +544,7 @@ footer a {
 
 footer a:hover,
 footer a:focus {
-  color: #D62828;
+  color: #d62828;
   text-decoration: none;
 }
 
@@ -544,7 +569,7 @@ footer a:focus {
   p,
   a,
   .learnMoreBtn {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   .formContainer {
@@ -555,7 +580,6 @@ footer a:focus {
 
   form {
     grid-area: 1 / 1 / 3 / 2;
-
   }
 
   .rocket {
@@ -567,7 +591,7 @@ footer a:focus {
   }
 
   input {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 
   button {
@@ -606,7 +630,7 @@ footer a:focus {
   p,
   a,
   .learnMoreBtn {
-    font-size: .6rem;
+    font-size: 0.6rem;
   }
 
   form p {
@@ -624,14 +648,14 @@ footer a:focus {
   }
 
   input {
-    font-size: .7rem;
+    font-size: 0.7rem;
     width: 100%;
     margin: 5px 0;
   }
 
   button {
     margin: 8px 0;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 
   .exit {
