--- a/src/App.css
+++ b/src/App.css
@@ -298,6 +298,7 @@ p {
   color: #ffffff;
   font-weight: 500;
   margin: 0;
+  font-size: 20px;
 }
 
 a,
@@ -367,12 +368,128 @@ main {
   /* overflow: auto; */
 }
 
+/* Carousel CSS */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 80%;
+  height: 100vh;
+
+  margin: auto;
+}
+
+.card-container {
+  position: relative;
+
+  width: 36rem;
+  height: 25rem;
+}
+
+.background-block {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.card-container svg {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+
+  font-size: 3rem;
+
+  color: gray;
+}
+
+.card-container svg:hover {
+  cursor: pointer;
+  color: blue;
+}
+
+article {
+  position: absolute;
+  width: 12rem;
+  height: 100%;
+
+  transition: all 1s;
+}
+
+.card {
+  position: absolute;
+
+  height: 30rem;
+  width: 15rem;
+
+  margin: 1rem;
+
+  background-color: gray;
+
+  border-radius: 1rem;
+
+  text-align: center;
+  text-transform: capitalize;
+
+  box-sizing: border-box;
+
+  user-select: none;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card img {
+  height: 10rem;
+  width: 15rem;
+
+  margin-top: 15px;
+
+  object-fit: cover;
+  object-position: top;
+
+  pointer-events: none;
+}
+
+.prevCard {
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+}
+
+.activeCard {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.nextCard {
+  left: 100%;
+  transform: translateX(-100%);
+  opacity: 0;
+  z-index: -1;
+}
+
+
+.leftBtn {
+  left: -1rem;
+}
+
+.rightBtn {
+  right: -1rem;
+}
+
 .formContainer {
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
   grid-template-rows: 2fr 1fr 0.5fr;
 }
+
+/* END */
+
+
 
 .rocketImg {
   grid-area: 2 / 2 / 4 / 4;
@@ -774,6 +891,25 @@ footer a:focus {
     font-weight: 700;
     font-size: 2rem;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .card-container {
+    width: 80%;
+  }
+
+  .prevCard {
+    left: -35%;
+  }
+
+  .nextCard {
+    left: 135%;
   }
 }
 
